--- a/backend/server_config/reverse-proxy.conf
+++ b/backend/server_config/reverse-proxy.conf
@@ -1,10 +1,15 @@
+## adapted from https://dev.to/brandonwallace/deploy-flask-the-easy-way-with-gunicorn-and-nginx-jgc 
+## modified by Certbot to enable HTTPS
 
+## this block defines the SABIO backend server
 server {
     listen 80;
     listen [::]:80;
     
+    ## base URL (will have to be changed)
     server_name sabio.diginfra.org;
     
+    ## locations of log and error files (don't need to be changed)
     access_log /var/log/nginx/reverse-access.log;
     error_log /var/log/nginx/reverse-error.log;
 
@@ -34,7 +39,10 @@ server {
 #	}
 
 
-
+    ## this ensures that the backend API is at sabio.diginfra.net/api/v1
+    ## rather than just sabio.diginfra.net
+    ## WARNING: somewhat instable version, only amend if necessary
+    ## (basically works by internally redirecting the API call to .../api/v1/...)s
     location /api/v1 {
 
                 proxy_set_header X-Real-IP $remote_addr;
@@ -46,7 +54,8 @@ server {
 
 	
 
-
+    ## GZIP compress any JSON data that is sent by server
+    ## (i.e. the responses by the SABIO backend)
 	gzip on;
 	gzip_types application/json;
 	gzip_proxied no-cache no-store private expired auth;
@@ -55,7 +64,7 @@ server {
 
 }
 
-
+## this block (created by Certbot) ensures that clients can't use HTTP to connect
 server {
     if ($host = sabio.diginfra.net) {
         return 301 https://$host$request_uri;
