--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,11 +1,38 @@
-Flask==2.0.2
-flask-compress==1.13
-joblib==1.1.0
-numpy==1.25.2
-pandas==1.3.5
-scikit-learn==1.0.2
-scipy==1.11.1
-swifter==1.3.2
-tqdm==4.62.3
+blinker==1.7.0
+Brotli==1.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+dask==2023.11.0
+Flask==3.0.0
+Flask-Compress==1.14
+fsspec==2023.10.0
 gunicorn==21.2.0
-Werkzeug==2.2.2
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+locket==1.0.0
+MarkupSafe==2.1.3
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.3
+partd==1.4.1
+psutil==5.9.6
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.4
+six==1.16.0
+swifter==1.4.0
+threadpoolctl==3.2.0
+toolz==0.12.0
+tqdm==4.66.1
+tzdata==2023.3
+urllib3==2.1.0
+Werkzeug==3.0.1
+zipp==3.17.0
